WDZO-912, WDZO-943: fixed dzo; changed max length of fields in forms; refactored
Squashed commit of the following:

commit 07220a01940b69f5aeab003b7e8f122dad1dc5fb
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Thu Nov 12 10:19:01 2020 +0300

    WDZO-943: removed effect

commit c8614a4a942b61ba412a0246be15e098b03102c8
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Thu Nov 12 09:50:00 2020 +0300

    WDZO-943: refactored categories

commit 6f2079e5c1d48df92855a46242cf7d5ec247c0e4
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Thu Nov 12 09:04:53 2020 +0300

    WDZO-912, WDZO-943: fixed dzo; changed max length of fields in forms; refactored

--- a/src/components/CategoryItem/CategoryItem.module.css
+++ b/src/components/CategoryItem/CategoryItem.module.css
@@ -72,12 +72,14 @@
     margin-bottom: 10px;
 }
 
-.text {
+.fieldActive {
     font-family: Tahoma, sans-serif;
     font-size: 16px;
+    font-weight: bold;
     margin-bottom: 3px;
+    color: #08a652;
 }
 
-.bold {
-    font-weight: bold;
+.red {
+    color: #da7675;
 }
