--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     height: inherit;
+    margin-right: 15px;
     text-decoration: none;
     font-family: SBSansText, sans-serif;
     font-size: 14px;
